--- a/src/App.css
+++ b/src/App.css
@@ -25,35 +25,17 @@
   height: 100%;
 }
 
-
-/* Icone Logo */
-.cloudsIcon {
-  display: flex;
-  align-items: center;
-  justify-content: flex-start;
-  width: 100px;
-  height: 100px;
-}
-
-.imageLogo {
-  display: flex;
-  justify-content: left;
-  width: 20vh;
-  height: fit-content;
-}
-
-
 /* Icone temp atual */
 .divIconeTemp {
   width: 100%;
-  height: 12vh;
+  height: 18vh;
 }
 
 /* Input principal */
 .inputPrincipal {
   display: flex;
   flex-direction: column;
-  color: white;
+  color: black;
   margin-left: 5vw;
 }
 
@@ -66,7 +48,7 @@
   align-items: center;
   justify-content: center;
   flex-direction: column;
-  width: 9vw;
+  width: 12vw;
   height: fit-content;
 }
 
@@ -89,7 +71,7 @@
 .mainDir {
   display: flex;
   flex-direction: row-reverse;
-  color: white;
+  color: black;
   width: 30vw;
   height: 80vh;
 }
@@ -100,7 +82,7 @@
   display: flex;
   flex-direction: column;
   border-radius: 20px;
-  color: white;
+  color: black;
   background: linear-gradient(to bottom, rgba(241, 241, 243, 0), rgba(203, 227, 247, 0.603));
   position: relative;
   margin-bottom: 2vh;
@@ -120,14 +102,14 @@
 }
 
 .componenteMinMaxSemana {
-  font-size: 17px;
+  font-size: 14px;
   display: flex;
   justify-content: center;
   margin: 3px;
 }
 
 .animationIconSemana {
-  width: 20%;
+  width: 45%;
   height: auto;
   display: flex;
   justify-content: center;
@@ -138,7 +120,7 @@
 /* temperatura por hora */
 .tempHora {
   display: flex;
-  color: white;
+  color: black;
   background: linear-gradient(to bottom, rgba(241, 241, 243, 0), rgba(203, 227, 247, 0.603));
   border-radius: 16px;
   width: fit-content;
@@ -276,3 +258,8 @@
   image-rendering: pixelated; /* mantém o visual de pixel art */
 }
 
+.logo,
+img[src*="vite.svg"] {
+  display: none !important;
+  visibility: hidden !important;
+}
